[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/prefabs/projectiles/PlayerProjectile.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]
radius = 0.2
height = 0.4

[sub_resource type="SphereShape" id=5]
radius = 0.2

[sub_resource type="Animation" id=6]
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 2.37841, 0.176777 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 1.5, 1.5, 1.5 ), Vector3( 0.1, 0.1, 0.1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="SphereShape" id=7]
radius = 0.21

[node name="PlayerProjectile" type="RigidBody"]
collision_layer = 0
collision_mask = 2147483648
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
layers = 0
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Area" type="Area" parent="."]
collision_layer = 2
collision_mask = 2147483650

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 7 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
